# nono_rent_backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  test.py
src/nono_rent_backend/: __init__.py  database.py  main.py
src/nono_rent_backend/api/: __init__.py
src/nono_rent_backend/api/routers/: __init__.py  landlord.py  lease.py  property.py  quittance.py  tenant.py
src/nono_rent_backend/models/: __init__.py  landlord.py  lease.py  property.py  quittance.py  tenant.py
src/nono_rent_backend/services/: landlord_service.py  lease_service.py  property_service.py  quittance_service.py  tenant_service.py
tests/: test_api.py  test_landlord.py  test_lease.py  test_lease_service.py  test_property.py  test_quittance.py  test_quittance_service.py  test_tenant.py
